Fences 7.x-1.0, 2012-04-26
--------------------------
- #1352202: Add option to limit field classes
- #1352202: Remove field-item, odd/even and clearfix classes from fields
- #1345802: Add setting to use/override core's default field wrapper for un-configured fields

Fences 7.x-1.0-beta2, 2012-04-11
--------------------------------
- #1344590: Move configuration functions to admin.inc file
- #1344452: Move hook_fences_suggestion_info implementations to an .inc file

Fences 7.x-1.0-beta1, 2011-11-15
--------------------------------
- Initial release