@@ -1,3 +1,13 @@
+Fences 7.x-1.2, 2015-09-24
+--------------------------
+- #2573745 by JohnAlbin: Un-configured fields appear to be configured to "no wrapper"
+
+Fences 7.x-1.1, 2015-09-21
+--------------------------
+- #1857230 by Xen, JohnAlbin: Add option to use the "normal" Drupal field output
+- #1711490 by dalberts69: @theme_name not properly replaced in UI
+- #1561244 by RoySegall and JohnAlbin: Undefined Index (with installation profiles and features?)
+
 Fences 7.x-1.0, 2012-04-26
 --------------------------
 - #1352202: Add option to limit field classes
